--- a/extended-utxo-spec/extended-utxo-specification.tex
+++ b/extended-utxo-spec/extended-utxo-specification.tex
@@ -128,7 +128,7 @@
 \newcommand{\spent}{\msf{spentOutputs}}
 \newcommand{\unspent}{\msf{unspentOutputs}}
 \newcommand{\txunspent}{\msf{unspentTxOutputs}}
-\newcommand{\eutxotx}{\msf{EUtxoTx}}
+\newcommand{\eutxotx}{\msf{Tx}}
 
 \newcommand{\qty}{\ensuremath{\s{Quantity}}}
 \newcommand{\qtypm}{\ensuremath{\s{Quantity}^{\pm}}}
