--- a/extended-utxo-spec/extended-utxo-specification.tex
+++ b/extended-utxo-spec/extended-utxo-specification.tex
@@ -621,36 +621,51 @@ the latter in rule~\ref{rule:all-inputs-validate}.
 
 \begin{ruledfigure}{H}
 \begin{enumerate}
-    \item \label{rule:all-inputs-refer-to-unspent-outputs} \textbf{All
-      inputs refer to unspent outputs:}
-      \[
-        t.\inputs \subseteq \unspent(\lambda).
-      \]
-    \item\label{rule:forging} \textbf{Forging:}
-      \begin{center}
-        \parbox{0.8\textwidth}{ A transaction with a non-zero \forge{}
-          field is only valid if the ledger $\lambda$ is empty (that
-          is, if it is the initial transaction).}
-    \end{center}
 
-    \item \label{rule:value-is-preserved} \textbf{Value is preserved}:
-    \[
-      t.\forge + \sum_{i \in t.\inputs} \getSpent(i, \lambda).\val = t.\fee + \sum_{o \in t.\outputs} o.\val
-    \]
-    \item \label{rule:no-double-spending} \textbf{No output is double spent:}
-    \[
-     \textrm{If } i_1, i_2 \in t.\inputs \textrm{ and }  i_1.\outputref = i_2.\outputref
-     \textrm{ then } i_1 = i_2.
-    \]
-    \item\label{rule:all-inputs-validate} \textbf{All inputs validate:}
-    \[
+\item
+  \label{rule:all-inputs-refer-to-unspent-outputs}
+  \textbf{All inputs refer to unspent outputs:}
+  \begin{displaymath}
+    t.\inputs \subseteq \unspent(\lambda).
+  \end{displaymath}
+
+\item
+  \label{rule:forging}
+  \textbf{Forging:} \\
+    A transaction with a non-zero \forge{}
+    field is only valid if the ledger $\lambda$ is empty (that
+    is, if it is the initial transaction).
+
+\item
+  \label{rule:value-is-preserved}
+  \textbf{Value is preserved}:
+  \begin{displaymath}
+    t.\forge + \sum_{i \in t.\inputs} \getSpent(i, \lambda).\val = t.\fee + \sum_{o \in t.\outputs} o.\val
+  \end{displaymath}
+
+\item
+  \label{rule:no-double-spending}
+  \textbf{No output is double spent:}
+  \begin{displaymath}
+    \textrm{If } i_1, i_2 \in t.\inputs \textrm{ and }  i_1.\outputref = i_2.\outputref
+    \textrm{ then } i_1 = i_2.
+  \end{displaymath}
+
+\item
+  \label{rule:all-inputs-validate}
+  \textbf{All inputs validate:}
+  \begin{displaymath}
     \textrm{For all } i \in t.\inputs,\enspace \llbracket
     i.\validator\rrbracket (\getSpent(i, \lambda).\valdata,\, i.\redeemer,\,  \delta(\tau(t,i))) = \true.
-      \]
-    \item\label{rule:validator-scripts-hash} \textbf{Validator scripts hash to their output addresses:}
-    \[
-      \textrm{For all } i \in t.\inputs,\enspace \scriptAddr(i.\validator) = \getSpent(i, \lambda).\addr
-    \]
+  \end{displaymath}
+
+\item
+  \label{rule:validator-scripts-hash}
+  \textbf{Validator scripts hash to their output addresses:}
+  \begin{displaymath}
+    \textrm{For all } i \in t.\inputs,\enspace \scriptAddr(i.\validator) = \getSpent(i, \lambda).\addr
+  \end{displaymath}
+
 \end{enumerate}
 \caption{Validity of a transaction $t$ in the EUTXO-1 model}
 \label{fig:eutxo-1-validity}
@@ -857,50 +872,62 @@ We can now adapt the definition of validity for EUTXO-1
 EUTXO-2: see Figure~\ref{fig:eutxo-2-validity}.
 
 \begin{ruledfigure}{H}
+\begin{enumerate}
+
+\item
+  \label{rule:all-inputs-refer-to-unspent-outputs-2}
+  \textbf{All inputs refer to unspent outputs:}
+  \begin{displaymath}
+    t.\inputs \subseteq \unspent(\lambda).
+  \end{displaymath}
+
+\item
+  \label{rule:forging-2}
+  \textbf{Forging:}\\
+  A transaction with a non-zero \forge{} field is only
+  valid if either:
   \begin{enumerate}
-    \item \label{rule:all-inputs-refer-to-unspent-outputs-2} \textbf{All
-      inputs refer to unspent outputs:}
-      \[
-        t.\inputs \subseteq \unspent(\lambda).
-      \]
-    \item \label{rule:forging-2} \textbf{Forging:}\\\\
-      \begin{minipage}{0.85\textwidth}
-        A transaction with a non-zero \forge{} field is only
-        valid if either:
-        \begin{enumerate}
-          \item the ledger $\lambda$ is empty (that is, if it is the initial transaction).
-          \item \label{rule:custom-forge}
-            for every key $h$ in $\support(t.\forge)$, there
-            exists $i \in t.\inputs$ and $(a,v,d) \in i.\outputs$ with
-            $a =h$; in other words, some input must spend an output
-            whose address is $h$.
-        \end{enumerate}
-      \end{minipage}
-    \item \textbf{Values are preserved}\\
-      \begin{minipage}{0.85\textwidth}
-          \label{rule:value-is-preserved-2}
-            \[
-            t.\forge + \sum_{i \in t.\inputs} \getSpent(i, \lambda) = \injectNative(t.\fee) + \sum_{o \in t.\outputs} o.\val
-            \]
-      \end{minipage}
-    \item \label{rule:no-double-spending-2} \textbf{No output is double spent:}
-    \[
-     \textrm{If } i_1, i_2 \in t.\inputs \textrm{ and }  i_1.\outputref = i_2.\outputref
-     \textrm{ then } i_1 = i_2.
-    \]
-    \item\label{rule:all-inputs-validate-2} \textbf{All inputs validate:}
-    \[
+    \item the ledger $\lambda$ is empty (that is, if it is the initial transaction).
+    \item \label{rule:custom-forge}
+      for every key $h$ in $\support(t.\forge)$, there
+      exists $i \in t.\inputs$ and $(a,v,d) \in i.\outputs$ with
+      $a =h$; in other words, some input must spend an output
+      whose address is $h$.
+  \end{enumerate}
+
+\item
+  \label{rule:value-is-preserved-2}
+  \textbf{Values are preserved}
+  \begin{displaymath}
+    t.\forge + \sum_{i \in t.\inputs} \getSpent(i, \lambda) = \injectNative(t.\fee) + \sum_{o \in t.\outputs} o.\val
+  \end{displaymath}
+
+\item
+  \label{rule:no-double-spending-2}
+  \textbf{No output is double spent:}
+  \begin{displaymath}
+    \textrm{If } i_1, i_2 \in t.\inputs \textrm{ and }  i_1.\outputref = i_2.\outputref
+    \textrm{ then } i_1 = i_2.
+  \end{displaymath}
+
+\item
+  \label{rule:all-inputs-validate-2}
+  \textbf{All inputs validate:}
+  \begin{displaymath}
     \textrm{For all } i \in t.\inputs,\enspace \llbracket
     i.\validator\rrbracket(\getSpent(i,\lambda).\valdata,\, i.\redeemer,\, \delta_2(\tau_2(t, i))) = \true
-      \]
-    \item\label{rule:validator-scripts-hash-2} \textbf{Validator scripts hash to their output addresses:}
-    \[
-      \textrm{For all } i \in t.\inputs,\enspace \scriptAddr(i.\validator) = \getSpent(i, \lambda).\addr
-    \]
-  \end{enumerate}
-  \caption{Validity of a transaction $t$ in the EUTXO-2 model}
-  \label{fig:eutxo-2-validity}
+  \end{displaymath}
 
+\item
+  \label{rule:validator-scripts-hash-2}
+  \textbf{Validator scripts hash to their output addresses:}
+  \begin{displaymath}
+    \textrm{For all } i \in t.\inputs,\enspace \scriptAddr(i.\validator) = \getSpent(i, \lambda).\addr
+  \end{displaymath}
+
+\end{enumerate}
+\caption{Validity of a transaction $t$ in the EUTXO-2 model}
+\label{fig:eutxo-2-validity}
 \end{ruledfigure}
 
 \noindent If any of the indexing operations here fail then the
